# msg_queue

./: .clang-format  CMakeLists.txt  Makefile  msg_queue.h  msg_queue.install  msg_queue.uninstall  msg_queue_app.c  msg_queue_dmn.c  msg_queue_lkm.c  msg_queue_lkm_fops.c  msg_queue_lkm_qops.c
Data/: messages
